# csvanalyzer

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  output.rs  types.rs  validation.rs
src/detection/: charset.rs  datatype.rs  datetime.rs  delimiter.rs  email.rs  header.rs  mod.rs  quote.rs
tests/fixtures/: test_no_header.csv  test_quoted.csv  test_semicolon.csv  test_simple.csv
